feat: add dark theme support with separate build outputs
- Created tokens-dark/color.json with semantic token overrides for dark mode
- Added sd.config.light.mjs and sd.config.dark.mjs for separate theme builds
- Updated package.json with build:light, build:dark scripts
- Generated light and dark theme outputs for all platforms (CSS, SCSS, JS, iOS, Android, Compose)
- Dark mode overrides include: border, text, foreground, background, and component tokens

--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "description": "Design system using Style Dictionary v5",
     "type": "module",
     "scripts": {
-        "build": "style-dictionary build --config sd.config.mjs",
-        "build:tokens": "style-dictionary build --config sd.config.mjs",
+        "build": "npm run build:light && npm run build:dark",
+        "build:light": "style-dictionary build --config sd.config.light.mjs",
+        "build:dark": "style-dictionary build --config sd.config.dark.mjs",
+        "build:tokens": "npm run build",
         "clean": "rm -rf build"
     },
     "keywords": [
